--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-use-websocket": "^4.13.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
