--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "playwright:report": "playwright show-report"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
@@ -26,10 +27,12 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.60.0",
     "react-use-websocket": "^4.13.0",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
+    "zod": "^4.0.4",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
